# hypertensor-evm

./: Cargo.toml  Dockerfile  README.md  customSpec.json  customSpecRaw.json  hoskinsonSpec.json  hoskinsonSpecRaw.json
.maintain/: frame-weight-template.hbs
evm-tests/: README.md  package-lock.json  package.json
evm-tests/contracts/: ECRecoverTests.sol  ExplicitRevertReason.sol  IERC20BalanceTransfer.sol  IOverwatchNode.sol  InvalidOpcode.sol  OverwatchNode.sol  Staking.sol  Storage.sol  Subnet.sol
evm-tests/src/: address-utils.ts  balance-math.ts  config.ts  network.ts  substrate.ts  test.ts  utils.ts
evm-tests/tests/: delegate_stake.precompile.add-remove.test.ts  delegate_stake.precompile.swap-transfer.test.ts  node_delegate_stake.precompile.add-remove.test.ts  node_delegate_stake.precompile.swap-transfer.test.ts  overwatch-node.register-remove.test.ts  overwatch-node.stake.add-remove.ts  overwatch-node.stake.commit-reveal.ts  overwatch-node.views.ts  staking.claim_unbondings.test.ts  staking.delegate_stake.add-remove.test.ts  staking.delegate_stake.swap-transfer.test.ts  staking.delegate_stake.swap-update-queue.test.ts  staking.node_delegate_stake.add-remove.test.ts  staking.node_delegate_stake.swap-transfer.test.ts  staking.precompile.add-remove.test.ts  staking.precompile.claim_unbondings.test.ts  staking.precompile.delegate_stake.add-remove.test.ts  staking.precompile.delegate_stake.swap-transfer.test.ts  staking.precompile.node_delegate_stake.add-remove.test.ts  staking.precompile.node_delegate_stake.swap-transfer.test.ts  staking.precompile.stake-get.test.ts  staking.precompile.subnet_node.add-remove-staking.test.ts  staking.subnet_node.add-remove-staking.test.ts  staking.subnet_node.update-parameters.test.ts  subnet.identity.add-remove-update.test.ts  subnet.owner.tests.ts  subnet.precompile.register-activate.test.ts  subnet.precompile.subnet.owner.ts  subnet.precompile.subnet.register-activate.test.ts  subnet.precompile.subnet_node.add-register-activate.test.ts  subnet.subnet.register-activate.test.ts  subnet.subnet_node.add-register-activate.test.ts  subnet_node.precompile.add-register-activate.test.ts
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  chain_spec_v1.rs  client.rs  command.rs  eth.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
pallets/atomic-swap/src/: lib.rs  tests.rs
pallets/author-subsidy/: Cargo.toml
pallets/author-subsidy/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/collective/: Cargo.toml
pallets/collective/src/: benchmarking.rs  lib.rs  tests.rs
pallets/network/: Cargo.toml
pallets/network/rpc/: Cargo.toml
pallets/network/rpc/src/: lib.rs
pallets/network/runtime-api/: Cargo.toml
pallets/network/runtime-api/src/: lib.rs
pallets/network/src/: benchmarking.rs  lib.rs  proposal.rs  rewards.rs  rewards_pool.rs  rewards_v2.rs  rewards_v3 copy.rs  rewards_v3.rs  rewards_v4.rs  weights.rs
pallets/network/src/admin/: admin.rs  mod.rs
pallets/network/src/bank/: mod.rs  rewards.rs  rewards_fork.rs
pallets/network/src/consensus/: mod.rs  subnet_validator.rs
pallets/network/src/overwatch_nodes/: commit_reveal.rs  commit_reveal_old.rs  mod.rs  registering.rs  removing.rs  staking.rs
pallets/network/src/rpc_info/: info.rs  mod.rs
pallets/network/src/stake/: delegate_staking.rs  mod.rs  node_delegate_staking.rs  overwatch_staking.rs  staking.rs  staking_pool.rs  staking_queue.rs  staking_utils.rs  transfer_utils.rs
pallets/network/src/supply/: inflation.rs  inflation_v2.rs  mod.rs
pallets/network/src/tests/: admin.rs  commit_reveal.rs  council.rs  delegate_staking.rs  emissions_stake_weight.rs  era.rs  identity.rs  incentives_protocol.rs  incentives_protocol_new.rs  incentives_protocol_new_new.rs  inflation.rs  keys.rs  math.rs  mock.rs  mod.rs  node_delegate_staking.rs  on_initialize.rs  overwatch_nodes.rs  overwatch_nodes_commit_reveal.rs  owner.rs  pause_queue.rs  proposals.rs  queue.rs  randomization.rs  registration_queue.rs  reputation.rs  rpc.rs  slot.rs  staking.rs  staking_new.rs  staking_queue.rs  staking_utils.rs  steps.rs  subnet.rs  subnet_cost.rs  subnet_node.rs  subnet_node_new.rs  subnet_node_new_new.rs  test_utils.rs  unbonding.rs  (+2 more)
pallets/network/src/utilities/: delegate_staking.rs  era.rs  identity.rs  keys.rs  math.rs  misc.rs  mod.rs  overwatch_node.rs  owner.rs  randomness.rs  reputation.rs  slot.rs  subnet.rs  subnet_node.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs
precompiles/: Cargo.toml
precompiles/src/: balance.rs  lib copy.rs  lib.rs  overwatch_nodes.rs  staking copy.rs  staking.rs  subnet.rs  template.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs  lib2.rs
runtime/src/configs/: mod.rs
ts-tests/: .gitignore  package-lock.json  package.json  truffle-config.js
ts-tests/contracts/: Staking.sol  Subnet.sol
ts-tests/helpers/: address-utils.ts  balance.ts  config.ts  substrate.ts
ts-tests/tests/: config.ts  test-balance.ts  test-erc20-transfer.ts  test-hypertensor-balance-transfer.ts  test-hypertensor-erc20-transfer.ts  test-hypertensor-staking.ts  test-hypertensor-subnet.ts  test-hypertensor.ts  test-pending-pool.ts  test-pending-transactions-rpc.ts  test-staking.ts  test-state-override.ts  test-subnet.ts  txpool.ts  util.ts
