[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "precompiles",
    "pallets/*",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
bn = { package = "substrate-bn", version = "0.6", default-features = false }
clap = { version = "4.5.13", features = ["derive", "deprecated"] }
const-hex = { version = "1.14", default-features = false, features = ["alloc"] }
derive_more = "1.0"
environmental = { version = "1.1.4", default-features = false }
ethereum = { git = "https://github.com/rust-ethereum/ethereum", rev = "3be0d8fd4c2ad1ba216b69ef65b9382612efc8ba", default-features = false }
ethereum-types = { version = "0.15", default-features = false }
evm = { git = "https://github.com/rust-ethereum/evm", branch = "v0.x", default-features = false }
futures = "0.3.31"
hash-db = { version = "0.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
impl-serde = { version = "0.5.0", default-features = false }
impl-trait-for-tuples = "0.2.3"
jsonrpsee = { version = "0.24.8" }
jsonrpsee-core = { version = "0.24.4" }
kvdb-rocksdb = "0.19.0"
libsecp256k1 = { version = "0.7.1", default-features = false }
log = { version = "0.4.22", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
parity-db = "0.4.13"
parking_lot = "0.12.3"
quote = "1.0.38"
rlp = { version = "0.6", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.132", default-features = false }
similar-asserts = "1.6.1"
sqlx = { version = "0.7.4", default-features = false, features = ["macros"] }
thiserror = "2.0"
tokio = "1.43.0"
bs58 = { version = "0.4.0" }
libm = "0.2.8"
docify = { version = "0.2.7" }
sp-arithmetic = { version = "0.30", default-features = false }

solochain-template-runtime = { path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
pallet-atomic-swap = { path = "./pallets/atomic-swap", default-features = false }
pallet-collective = { path = "./pallets/collective", default-features = false }
pallet-network = { path = "./pallets/network", default-features = false }
hypertensor-precompiles = { path = "./precompiles", default-features = false }

# Substrate Client
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }

# Substrate Primitive
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-database = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

# Substrate FRAME
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
pallet-tx-pause = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

# Substrate Utility
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }

# Cumulus primitives
cumulus-primitives-proof-size-hostfunction = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }
cumulus-primitives-storage-weight-reclaim = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412", default-features = false }

# Arkworks
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-bw6-761 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

# Frontier Client
fc-api = { git = "https://github.com/polkadot-evm/frontier" }
fc-cli = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fc-consensus = { git = "https://github.com/polkadot-evm/frontier" }
fc-db = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fc-mapping-sync = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fc-rpc = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fc-rpc-core = { git = "https://github.com/polkadot-evm/frontier" }
fc-rpc-v2 = { git = "https://github.com/polkadot-evm/frontier" }
fc-rpc-v2-api = { git = "https://github.com/polkadot-evm/frontier" }
fc-rpc-v2-types = { git = "https://github.com/polkadot-evm/frontier" }
fc-storage = { git = "https://github.com/polkadot-evm/frontier" }
# Frontier Primitive
fp-account = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fp-consensus = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fp-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fp-ethereum = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fp-evm = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fp-rpc = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fp-self-contained = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
fp-storage = { git = "https://github.com/polkadot-evm/frontier", default-features = false }

# Frontier FRAME
pallet-base-fee = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-ethereum = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-evm = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/polkadot-evm/frontier", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/polkadot-evm/frontier" }
pallet-hotfix-sufficients = { git = "https://github.com/polkadot-evm/frontier", default-features = false }

ed25519-dalek = { version = "2.1.0", default-features = false, features = ["alloc"] }
precompile-utils = { git = "https://github.com/polkadot-evm/frontier", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

