[package]
name = "hypertensor-precompiles"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
homepage = { workspace = true }
publish = false
repository =  { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
fp-evm = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-balances = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
precompile-utils = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-network = { workspace = true }
pallet-template = { workspace = true }
fp-account = { workspace = true }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-evm-precompile-modexp/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm/std",
	"pallet-network/std",
	"pallet-template/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]